# column-more

./: .gitignore  .python-version  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
column_more/: scraper.py  scrapper.py
