[tool.poetry]
name = "column-more"
version = "0.1.0"
description = ""
authors = ["chado13"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.971"




[tool.black]
line-length = 88


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.mypy]
python_version = "3.10"
pretty = true
disallow_untyped_calls =  true
disallow_untyped_defs = true
disallow_incomplete_defs= true
disallow_any_generics = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
allow_redefinition = true
strict_optional = false