[tool.poetry]
name = "column-more"
version = "0.1.0"
description = ""
authors = ["chado13"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
lxml = "^4.9.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
ruff = "^0.0.253"

[tool.black]
line-length = 88


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.mypy]
python_version = "3.10"
pretty = true
disallow_untyped_calls =  true
disallow_untyped_defs = true
disallow_incomplete_defs= true
disallow_any_generics = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
allow_redefinition = true
strict_optional = false

[tool.ruff]
extend-ignore = ["I001"] 
line-length = 100
fix = true
exclude = ["**/versions/**"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.isort]
known-first-party = ["app"]